--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,19 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  google_fonts: ^5.1.0
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^1.1.0
 
 dev_dependencies:
   
+  
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  hive_generator:
+  build_runner:
 
 
 flutter:
