--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,12 @@ environment:
 
 
 dependencies:
-  bloc: ^8.1.2
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.0
   google_fonts: ^5.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
